# src/domain/entities/__init__.py
@@ -5,12 +5,14 @@ from .order import Order
 from .historical import Historical
 from .keys import KVItemKey, HistoricalKey
 from .xobject import XObject
+from .xrules import XRule
+from .xcondition import XCondition
 from .tenants import Tenants
 from .entrypoint import Entrypoint
 from .kv import KV
 from .kv_item import KVItem
 from .rule_relation import RuleRelation
-from .conditions import Conditions
+from .conditions import Condition
 from .rule import Rule
 
 
