# src/webapi/endpoints/create_rule.py
@@ -23,8 +23,7 @@ def new_rules_endpoint(tid=None):
     command = CreateRuleRequest(
         new_rules.name,
         new_rules.rule_type,
-        new_rules.result_default,
-        new_rules.kvs_id,
+        new_rules.kvs_id_nok,
         new_rules.conditions
     )
 
